--- a/ref.bib
+++ b/ref.bib
@@ -69,3 +69,14 @@
   year={2012},
   organization={LIPIcs}
 }
+
+@article{RudelsonVershynin,
+  title={Sampling from large matrices: An approach through geometric functional analysis},
+  author={Rudelson, Mark and Vershynin, Roman},
+  journal={Journal of the ACM (JACM)},
+  volume={54},
+  number={4},
+  pages={21},
+  year={2007},
+  publisher={ACM}
+}
