--- a/ref.bib
+++ b/ref.bib
@@ -80,3 +80,23 @@
   year={2007},
   publisher={ACM}
 }
+
+@inproceedings{Achlioptas,
+  title={Fast computation of low rank matrix approximations},
+  author={Achlioptas, Dimitris and McSherry, Frank},
+  booktitle={Proceedings of the thirty-third annual ACM symposium on Theory of computing},
+  pages={611--618},
+  year={2001},
+  organization={ACM}
+}
+
+@article{BatsonSpielmanSrivastava,
+  title={Twice-ramanujan sparsifiers},
+  author={Batson, Joshua and Spielman, Daniel A and Srivastava, Nikhil},
+  journal={SIAM Journal on Computing},
+  volume={41},
+  number={6},
+  pages={1704--1721},
+  year={2012},
+  publisher={SIAM}
+}
