dont call r diagonal

--- a/survey.tex
+++ b/survey.tex
@@ -356,10 +356,10 @@ invertible.
 In this section we define the Projection matrix $\Pi$ and prove some facts
 about it. Later, we show that $\Pi$ can be used to bound the spectral
 approximation error.  To define $\Pi$, we need the $(m \times m)$ symmetric
-\textit{resistance matrix} $R = BL^+B^T$, which is diagonal ($R(e, e) =
-R_e$) \footnote{We explain the significance of $R$ in Section 4.}.  The $(m
-\times m)$ \textit{projection matrix} is $\Pi = W^{1/2}RW^{1/2}$. We prove
-some properties of the projection matrix:
+\textit{resistance matrix} $R = BL^+B^T$, with diagonal entries ($R(e,
+e) = R_e$) \footnote{We explain the significance of $R$ in Section 4.}.  The
+$(m \times m)$ \textit{projection matrix} is $\Pi = W^{1/2}RW^{1/2}$. We
+prove some properties of the projection matrix:
 \begin{enumerate}[1.]
     \item $\Pi$ is a projection matrix.
         
